--- a/app/src/main/res/drawable/bg_received_message.xml
+++ b/app/src/main/res/drawable/bg_received_message.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/colorThree"/>
-            <corners android:radius="@dimen/gap_large"/>
+            <corners android:radius="@dimen/gap_normal"/>
         </shape>
     </item>
 </layer-list>
