--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -52,8 +52,7 @@
                 android:layout_height="@dimen/progress_height"
                 android:layout_weight="3"
                 android:progressTint="@color/colorPrimary"
-                android:progressBackgroundTint="@color/colorPrimary"
-                android:indeterminate="false"/>
+                android:progressBackgroundTint="@color/colorProgressBG"/>
 
         </LinearLayout>
 
