--- a/app/src/main/res/drawable/bg_sent_message.xml
+++ b/app/src/main/res/drawable/bg_sent_message.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/colorPrimary"/>
-            <corners android:radius="@dimen/gap_big"/>
+            <corners android:radius="@dimen/gap_normal"/>
         </shape>
     </item>
 </layer-list>
