--- a/app/src/main/res/layout/activity_new_message.xml
+++ b/app/src/main/res/layout/activity_new_message.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <include android:id="@+id/actionBar" layout="@layout/actionbar_back"/>
 
@@ -13,42 +15,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableEnd="@drawable/btn_contact_add"
+        android:drawableTint="@color/colorOne"
         android:hint="@string/receiver_"
         android:maxLines="1"/>
 
-    <LinearLayout
+    <ListView
+        tools:listitem="@layout/item_contact_number"
+        android:layout_below="@id/receiverBox"
+        android:layout_above="@id/senderBar"
+        android:id="@+id/contactListView"
         android:layout_marginStart="@dimen/gap_large"
         android:layout_marginEnd="@dimen/gap_large"
-        android:layout_marginBottom="@dimen/gap_large"
-        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <ImageButton
-            android:id="@+id/clipButton"
-            android:layout_width="@dimen/button_size_normal"
-            android:layout_height="@dimen/button_size_normal"
-            android:background="@drawable/bg_circle_button"
-            android:src="@drawable/ic_add"/>
-        <EditText
-            android:paddingStart="@dimen/gap_normal"
-            android:paddingEnd="@dimen/gap_normal"
-            android:id="@+id/messageBox"
-            android:layout_marginStart="@dimen/gap_small"
-            android:layout_marginEnd="@dimen/gap_small"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/bg_input_box_round"/>
-        <ImageButton
-            android:id="@+id/sendButton"
-            android:layout_width="@dimen/button_size_normal"
-            android:layout_height="@dimen/button_size_normal"
-            android:background="@drawable/bg_circle_button"
-            android:src="@drawable/ic_send"/>
-    </LinearLayout>
+        android:layout_height="match_parent"/>
 
     <RelativeLayout
+        android:id="@+id/senderBar"
         android:layout_alignParentBottom="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
