--- a/app/src/main/res/layout/item_message_date.xml
+++ b/app/src/main/res/layout/item_message_date.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/gap_big"
-    android:gravity="center"
-    android:textSize="@dimen/text_size_normal"
-    android:textColor="@color/colorTwo"
-    android:text="@string/temp_sms_time"/>
+    android:orientation="horizontal">
+    <TextView
+        android:id="@+id/messageTimeView"
+        android:padding="@dimen/gap_normal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorTwo"
+        android:textSize="@dimen/text_size_small"
+        android:gravity="center"
+        android:text="@string/temp_sms_time"/>
+</LinearLayout>
