--- a/app/src/main/res/layout/part_send_message.xml
+++ b/app/src/main/res/layout/part_send_message.xml
@@ -9,23 +9,26 @@
         android:id="@+id/clipButton"
         android:layout_width="@dimen/button_size_normal"
         android:layout_height="@dimen/button_size_normal"
-        android:background="@drawable/bg_circle_button"
+        android:background="@drawable/btn_circle_button"
         android:src="@drawable/ic_add"/>
     <EditText
-        android:paddingStart="@dimen/gap_normal"
-        android:paddingEnd="@dimen/gap_normal"
         android:id="@+id/messageBox"
         android:layout_marginStart="@dimen/gap_small"
         android:layout_marginEnd="@dimen/gap_small"
+        android:paddingStart="@dimen/gap_big"
+        android:paddingEnd="@dimen/gap_big"
+        android:paddingTop="@dimen/gap_tiny"
+        android:paddingBottom="@dimen/gap_tiny"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/input_box_height_normal"
         android:layout_weight="1"
+        android:hint="@string/type_messages"
         android:background="@drawable/bg_input_box_round"/>
     <ImageButton
         android:id="@+id/sendButton"
         android:layout_width="@dimen/button_size_normal"
         android:layout_height="@dimen/button_size_normal"
-        android:background="@drawable/bg_circle_button"
+        android:background="@drawable/btn_circle_button"
         android:src="@drawable/ic_send"/>
 
 </LinearLayout>
