--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,17 +11,26 @@
     <dimen name="gap_big">18dp</dimen>
     <dimen name="gap_large">24dp</dimen>
     <dimen name="gap_extra">30dp</dimen>
+    <dimen name="stroke_normal">1dp</dimen>
     <dimen name="splash_logo_size">123dp</dimen>
     <dimen name="progress_height">6dp</dimen>
+    <dimen name="password_text_size">36sp</dimen>
+    <dimen name="password_box_size">57dp</dimen>
     <dimen name="app_bar_height">72dp</dimen>
     <dimen name="button_height_small">39dp</dimen>
     <dimen name="button_width_small">78dp</dimen>
-    <dimen name="button_size_normal">36dp</dimen>
+    <dimen name="button_size_small">36dp</dimen>
+    <dimen name="button_size_normal">48dp</dimen>
+    <dimen name="button_size_big">57dp</dimen>
+    <dimen name="photo_size_normal">48dp</dimen>
+    <dimen name="nav_button_size">36dp</dimen>
+    <dimen name="input_box_height_normal">48dp</dimen>
+    <dimen name="icon_size_small">18dp</dimen>
     <dimen name="icon_size_normal">24dp</dimen>
+    <dimen name="icon_size_big">30dp</dimen>
     <dimen name="radio_button_size">36dp</dimen>
     <dimen name="language_list_item_height">69dp</dimen>
-    <dimen name="message_photo_size">48dp</dimen>
-    <dimen name="new_badge_size">15dp</dimen>
+    <dimen name="new_badge_size">9dp</dimen>
     <dimen name="error_badge_size">15dp</dimen>
     <dimen name="message_max_width">270dp</dimen>
 </resources>
